--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="/public/main.css">
-
-
   <title>Hello, world!</title>
 </head>
 
@@ -20,56 +17,18 @@
 
   <%- include('nav.html') %>
 
-
-    <div class="container">
-      <h4 class="m1-2 my-3 text-center">서버에서 가져온 할 일 목록</h4>
-      <ul class="list-group">
-        <% for (var i=0 ; i < posts.length ; i ++){ %>
-          <li class="list-group-item">
-            <p>글번호 : <%= posts[i]._id %>
-            </p>
-            <h4>할일 제목 : <%= posts[i].제목 %>
-            </h4>
-            <p>할일 마감날짜 : <%= posts[i].날짜 %>
-            </p>
-            <button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">삭제</button>
-          </li>
-          <% } %>
-
-      </ul>
+    <div class="jumbotron">
+      <h1 class="display-4">홈이닷</h1>
+      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
+        featured content or information.</p>
+      <hr class="my-4">
+      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-
-
-    <script>
-
-      $('.delete').click(function (e) {
-        var 글번호 = e.target.dataset.id;
-        var 지금누른거 = $(this);
-        $.ajax({
-          method: 'DELETE',
-          url: '/delete',
-          data: { _id: 글번호 }
-        }).done(function (결과) {
-          console.log('ajax 성공했어요')
-          지금누른거.parent('li').fadeOut();
-
-        }).fail(function (xhr, textStatus, errorThrown) {
-          console.log('ajax 실패했어요');
-          console.log(xhr, textStatus, errorThrown);
-        })
-      })
-
-
-
-    </script>
-
-
-
-
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
       crossorigin="anonymous"></script>
