--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,6 +29,27 @@
                 <button type="submit" class="btn btn-outline-secondary">Submit</button>
             </form>
         </div>
+
+        <div class="container mt-3">
+            <form action="/register" method="post">
+                <div class="form-group">
+                    <label>아이디</label>
+                    <input type="text" class="form-control" name="id">
+                </div>
+                <div class="form-group">
+                    <label>비밀번호</label>
+                    <input type="text" class="form-control" name="pw">
+                </div>
+                <button type="submit" class="btn btn-outline-secondary">가입</button>
+            </form>
+        </div>
+
+
+
+
+
+
+
         <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
