--- a/views/nav.html
+++ b/views/nav.html
@@ -17,6 +17,9 @@
         <a class="nav-link" href="/list">List</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/login">Login</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">임시</a>
       </li>
   </div>
